@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-06T16:12:51Z",
-  "count_outdated" : 5642,
-  "uniques_outdated" : 1871,
+  "timestamp" : "2023-11-07T00:44:40Z",
+  "count_outdated" : 5647,
+  "uniques_outdated" : 1875,
   "count" : 5698,
   "uniques" : 1910,
   "clones" : [
-    {
-      "timestamp": "2023-10-23T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 5 ],
-      "count_decinc": [ 3, 5 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 4 ],
-      "uniques_decinc": [ 2, 4 ]
-    },
     {
       "timestamp": "2023-10-24T00:00:00Z",
       "count": 8,
