@@ -1,12 +1,7 @@
 {
-  "count": 53,
-  "uniques": 21,
+  "count": 51,
+  "uniques": 20,
   "clones": [
-    {
-      "timestamp": "2023-10-23T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-10-24T00:00:00Z",
       "count": 8,
