@@ -1,3 +1,12 @@
+2023-11-07T00:44:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6778411962 # 2054
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-07
+* notice: last 14d: unq all: 20 51
+* notice: prev accum: outdated-unq outdated-all / unq all: 1871 5642 / 1910 5698
+* notice: next accum: outdated-unq outdated-all / unq all: 1875 5647 / 1910 5698
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-10-23] / []
+
 2023-11-06T16:12:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6773441269 # 2053
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-06
